setting up sql connection strings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "ShoeShopDB": "Server=.;Database=ShoeShopApi;Intergrated Security=True"
+  },
   "AllowedHosts": "*"
 }
