added colums to database and created a model class containing shoe properties

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ShoeShopDB": "Server=.;Database=ShoeShopApi;Intergrated Security=True"
+    "ShoeShopDB": "Server=(localdb)\\MSSQLLocalDB;Database=ShoeShopApi;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
